Recreated theme, zebradog_schedule

--- a/modules/custom/zebradog_schedule/css/schedule.css
+++ b/modules/custom/zebradog_schedule/css/schedule.css
@@ -109,3 +109,6 @@
 .end-time {
 
 }
+body.embed #admin-menu-wrapper, body.embed #admin-toolbar, body.embed div#admin-menu-wrapper, body.embed #admin-menu {
+  display:none;
+}
