--- a/modules/custom/zebradog_schedule/css/schedule.css
+++ b/modules/custom/zebradog_schedule/css/schedule.css
@@ -93,7 +93,7 @@
   background-color: #000;
   border-radius: 3px;
   padding: 2px 3px;
-  display: inline;
+  display: none;
 }
 .calendar-extras .label {
   font-size: 0.75em;
