Bringing this repository up-to-date, moving future development here

--- a/themes/custom/zd_ui/css/style.css
+++ b/themes/custom/zd_ui/css/style.css
@@ -41,3 +41,15 @@ div.region-navigation {
 .form-item-author {
   width:180px;
 }
+.fc-header-right {
+  display:none;
+}
+section#block-user-login.user-menu {
+  float:none;
+}
+#block-user-login .btn {
+  float:right;
+}
+.dropdown-menu li.leaf, .dropdown-menu li.expanded {
+  width:100%;
+}
