--- a/modules/custom/zebradog_schedule/css/schedule.css
+++ b/modules/custom/zebradog_schedule/css/schedule.css
@@ -1,52 +1,11 @@
-#wrap {
-  width: 1100px;
-  margin: 0 auto;
-  }
-
-#external-events {
-  float: left;
-  width: 150px;
-  padding: 0 10px;
-  border: 1px solid #ccc;
-  background: #eee;
-  text-align: left;
-  }
-
-#external-events h4 {
-  font-size: 16px;
-  margin-top: 0;
-  padding-top: 1em;
-  }
-
-.external-event { /* try to mimick the look of a real event */
-  margin: 10px 0;
-  padding: 2px 4px;
-  background-color:#428bca;
-  border-color:#357ebd;
-  color: #fff;
-  font-size: .85em;
-  cursor: pointer;
-  border-radius:4px;
-  }
-#external-events p {
-  margin: 1.5em 0;
-  font-size: 11px;
-  color: #000;
-  }
-
-#external-events p input {
-  margin: 0;
-  vertical-align: middle;
-  }
-
-#calendar {
-  float: right;
-  width: 900px;
-  }
-
 .modal{
   border-radius: 6px;
 }
+
+.modal.loading .modal-body, .modal.loading .modal-footer{
+  visibility: hidden;
+}
+
 .modal .nav{
   margin:10px 0 0 0;
   padding:0 30px 0 10px;
@@ -86,29 +45,46 @@
     color: #fff;              /* text color */
     cursor:pointer;
 }
-.taxonomy-checkbox {display: block;}
-.taxonomy-checkbox input {  float:left; margin-right:0.25rem; }
-.calendar-extras {
-  font-size: 0.75em;
-  background-color: #000;
-  border-radius: 3px;
-  padding: 2px 3px;
-  display: none;
-}
-.calendar-extras .label {
-  font-size: 0.75em;
-  background-color: #fff;
-  border-radius: 3px;
-  padding: 2px 3px;
-  display: inline;
-  color:#000;
-}
-.start-time {
 
-}
-.end-time {
-
-}
 body.embed #admin-menu-wrapper, body.embed #admin-toolbar, body.embed div#admin-menu-wrapper, body.embed #admin-menu {
   display:none;
+}
+
+.ib{
+  display:inline-block;
+}
+
+#scenario-schedule .c-text{
+  text-align:center;
+}
+
+#scenario-schedule .padright{
+  padding-right:20px;
+}
+
+#scenario-schedule .padsides{
+  padding-left:20px;
+  padding-right:20px;
+}
+
+#scenario-schedule .hcenter{
+  display:block;
+  margin:0 auto;
+}
+
+#scenario-schedule form{
+  padding:15px;
+}
+
+#scenario-schedule input{
+  padding:5px;
+}
+
+.clockpicker-popover.popover, .clockpicker-am-pm-block, .clockpicker-am-pm-block > .btn{
+  z-index:999999;
+}
+.required-text{
+  font-size:10px;
+  font-weight:normal;
+  color:red;
 }
