--- a/themes/contrib/yorkshire/css/style.css
+++ b/themes/contrib/yorkshire/css/style.css
@@ -22,3 +22,19 @@
   }
 
 }
+.login-page-header.logo .logo-lg {
+  display: block;
+}
+.login-page-header.logo .logo-mini {
+  display: none;
+}
+
+body .label {
+  color: #333;
+  font-size: 80%;
+}
+
+a.tabledrag-handle .handle {
+  width: 24px;
+  height: 24px;
+}
