--- a/themes/custom/westminster_theme/templates/layout/page--schedule.html.twig
+++ b/themes/custom/westminster_theme/templates/layout/page--schedule.html.twig
@@ -53,6 +53,7 @@
   {{ attach_library('westminster_theme/schedule') }}
   <script type="text/javascript">
   var BASE_PATH = "{{base_path}}";
+  var TIMEZONE = "{{timezone}}";
   </script>
   <div class="row">
     <div class="col-md-3">
