--- a/themes/contrib/yorkshire/templates/views/views-view-table.html.twig
+++ b/themes/contrib/yorkshire/templates/views/views-view-table.html.twig
@@ -43,6 +43,7 @@
     'responsive'
   ]
 %}
+<div class="table-responsive">
 <table{{ attributes.addClass(classes) }}>
   {% if caption_needed %}
     <caption>
@@ -128,3 +129,4 @@
     {% endfor %}
   </tbody>
 </table>
+</div>
