--- a/themes/custom/westminster_theme/templates/content/node--button.html.twig
+++ b/themes/custom/westminster_theme/templates/content/node--button.html.twig
@@ -63,4 +63,9 @@
  *   in different view modes.
  */
 #}
-<a href="{{node.field_url[0].url }}" class="btn btn-primary">{{ node.title.value }}</a>
+<a href="{{node.field_url[0].url }}" class="btn {% if node.field_button_color.value %}btn-{{ node.field_button_color.value }}{% else %}btn-primary{% endif %}">
+  {% if node.field_icon.value %}
+    <i class="fa fa-{{ node.field_icon.value }}"></i>
+  {% endif %}
+  {{ node.title.value }}
+</a>
