--- a/themes/custom/westminster_theme/templates/block/block--page-manager-page-buttons.html.twig
+++ b/themes/custom/westminster_theme/templates/block/block--page-manager-page-buttons.html.twig
@@ -26,7 +26,11 @@
  * @see template_preprocess_block()
  */
 #}
-{% if label %}
-  <h4>{{label}}</h4>
-{% endif %}
-{% block content %}{{ content }}{% endblock %}
+<div class="row">
+  <div class="col-xs-12">
+    {% if label %}
+      <h4>{{label}}</h4>
+    {% endif %}
+    {% block content %}{{ content }}{% endblock %}
+  </div>
+</div>
