--- a/themes/custom/westminster_theme/css/style.css
+++ b/themes/custom/westminster_theme/css/style.css
@@ -3,5 +3,8 @@
   visibility: hidden;
 }
 .page-manager-block-buttons{
-  padding:0 0 20px 0;
+  padding:0 0 10px 0;
+}
+.paage-manager-block-buttons .btn{
+  margin: 0 2px 5px 0;
 }
