--- a/themes/contrib/yorkshire/css/style.css
+++ b/themes/contrib/yorkshire/css/style.css
@@ -10,6 +10,10 @@
   height:50px;
 }
 
+.login-box .logo-lg > img {
+  max-width: 100%;
+}
+
 @media (max-width: 767px){
 
   body.skin-black #logo,
