--- a/themes/custom/westminster_theme/css/style.css
+++ b/themes/custom/westminster_theme/css/style.css
@@ -8,3 +8,7 @@
 .page-manager-block-buttons .btn{
   margin: 0 2px 5px 0;
 }
+body.path-node .nav-tabs {
+  display: none;
+  visibility: hidden;
+}
