fixed issue with footer formatting

--- a/themes/custom/westminster_theme/templates/layout/page.html.twig
+++ b/themes/custom/westminster_theme/templates/layout/page.html.twig
@@ -148,6 +148,7 @@
 
 <footer class="main-footer">
   {{ page.footer }}
+  &nbsp;
   <div class="credits pull-right">
     Powered by <a target="_blank" href="https://www.zebradog.com"><img src="{{ base_path ~ directory }}/img/zebradog.png" alt="ZEBRADOG" /></a>
   </div>
