Squashed 'themes/contrib/yorkshire/' changes from b413b0a..8f3a957
8f3a957 added screenshot. closes #12.
2b1cfbd Merge branch '8.x-1.x' of https://github.com/zebradog/yorkshire into 8.x-1.x
c29133d moved custom event polyfill, considering it example/tutorial code rather than a full library. closes #19.
f075acf fixed error when user_picture not enable
07fc96f IE9/10 support bug fix
5243b62 logo size
f047b5a fixed php error with yorkshire
c0f9aab fixing title formatting
404e2d2 minor layout adjustments
52f8e5f add custom button block type
dbfce5f responsive tables
cf56c2b page manager block heading formatting
481fb87 added additional layout options

git-subtree-dir: themes/contrib/yorkshire
git-subtree-split: 8f3a957a46171f4b79f7c86c0f3c9f30499d0ce9

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@
   height:50px;
 }
 
+.login-box .logo-lg > img {
+  max-width: 100%;
+}
+
 @media (max-width: 767px){
 
   body.skin-black #logo,
@@ -37,4 +41,14 @@ body .label {
 a.tabledrag-handle .handle {
   width: 24px;
   height: 24px;
+}
+
+.box > .box-header > h4{
+  margin:0;
+}
+
+@media (max-width: 991px){
+  .content-header > h1.page-title{
+    margin-top:20px;
+  }
 }
