--- a/templates/block/block--page-manager-page-block.html.twig
+++ b/templates/block/block--page-manager-page-block.html.twig
@@ -29,7 +29,7 @@
 <div class="box">
   {% if label %}
     <div class="box-header with-border">
-     {{ label }}
+     <h4>{{ label }}</h4>
     </div>
   {% endif %}
   <div class="box-body">
